--- a/src/components/GradShootForm.css
+++ b/src/components/GradShootForm.css
@@ -1,5 +1,5 @@
 .formSectionContainer {
-    min-height: 300px;
+    min-height: 350px;
     display:flex;
     /* align-items: center; */
     justify-content: center;
